Fix horizontal overflow for chrome desktop

--- a/assets/sass/components/_Banner.scss
+++ b/assets/sass/components/_Banner.scss
@@ -7,12 +7,11 @@
 }
 
 .Banner-Title {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   letter-spacing: 5px;
   font-weight: 800;
-  outline: none;
-  outline-color: transparent;
+  outline: transparent none;
   color: rgba(0, 0, 0, 0);
   font-size: 15vw;
   -webkit-text-stroke-color: $BannerTitleColor;
@@ -21,8 +20,8 @@
 
 .Banner-Subtitle {
   font-size: 5vw;
-  margin: 0em 0em;
-  padding: 0em;
+  margin: 0 0;
+  padding: 0;
   font-weight: 300;
   color: $BannerSubTitleColor;
 }
@@ -52,10 +51,11 @@
 
 .Banner-VideoOverlay {
   position: relative;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   z-index: 10;
   background: $videoOverlayColor;
   width: 100vw;
+  max-width: 100%;
   height: 100vh;
 }
