--- a/assets/sass/components/_Footer.scss
+++ b/assets/sass/components/_Footer.scss
@@ -3,6 +3,7 @@
  */
 .Footer {
   width: 100vw;
+  max-width: 100%;
   border-top: 2px solid $menuBorderColor;
 
   a {
